--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,20 +1,31 @@
-<h1>Nearby Stores</h1>
-<% @stores.each do |store| %>
-  <div id="store-map">
-    <iframe
-      width="400"
-      height="400"
-      frameborder="0" style="border:0"
-      src="https://www.google.com/maps/embed/v1/place?key=<%= store.google_embed_key  %>&q=place_id:<%= store.place_id  %>">
-  </iframe>
+<h1 class="white-text">Nearby Stores</h1>
+<div class="row">
+  <% @stores.each do |store| %>
+    <div class="col s12 m6">
+      <h5 class="blue-text "><%= truncate(store.name, length: 30) %></h5>
+      <div class="card blue-grey lighten-5 horizontal">
+        <div class="card-image">
+          <iframe
+            width="200"
+            height="200"
+            frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/place?key=<%= store.google_embed_key  %>&q=place_id:<%= store.place_id  %>">
+          </iframe>
+        </div>
+        <div class="card-stacked">
+          <div class="card-content">
+            <div id="store-info" class="black-text">
+              <p>Address: <%= store.address %></p>
+              <p>Status: <%= store.open_now %></p>
+              <p>Google Rating: <%= store.google_rating %></p>
+              <p><%= store.operating_hours %></p>
+            </div>
+          </div>
+          <div class="card-action">
+            <a href="#">Store Info</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <br>
-  <div id="store-info">
-    <h3><%= store.name %></h3>
-    <p>Address: <%= store.address %></p>
-    <p>Status: <%= store.open_now %></p>
-    <p>Google Rating: <%= store.google_rating %></p>
-    <p><%= store.operating_hours %></p>
-  </div>
-    <br><br>
-<% end %>
+  <% end %>
+</div>
