--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,18 @@
       <a href="#!" class="brand-logo">Tank Man</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
+        <li><a href=<%= stores_path %>>Stores</a></li>
         <li><a href="sass.html">Profile</a></li>
         <li><a href="badges.html">Community</a></li>
         <li><a href="collapsible.html">Login</a></li>
         <li><a href="mobile.html">Logout</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li><a href=<%= stores_path %>>Stores</a></li>
+        <li><a href="sass.html">Profile</a></li>
+        <li><a href="badges.html">Community</a></li>
+        <li><a href="collapsible.html">Login</a></li>
+        <li><a href="mobile.html">Logout</a></li>
       </ul>
     </div>
   </nav>
