--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper" id="navbar">
       <a href="#!" class="brand-logo">Tank Man</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
+      <ul class="right valign-wrapper hide-on-med-and-down">
         <li><a href=<%= stores_path %>>Stores</a></li>
         <li><a href="sass.html">Profile</a></li>
         <li><a href="badges.html">Community</a></li>
-        <li> <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %> </li>
-        <li><a href="mobile.html">Logout</a></li>
+        <li> <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" unless current_user%> </li>
+        <li> <%= image_tag current_user.image_url, class: "circle responsive-img small valign", height: "40", width: "40" unless !current_user%> </li>
+        <li> <%= link_to "Logout", logout_path, id: "logout" unless !current_user%></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href=<%= stores_path %>>Stores</a></li>
