add additional store details to index page

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -18,7 +18,7 @@
               <p>Address: <%= store.address %></p>
               <p>Status: <%= store.open_now %></p>
               <p>Google Rating: <%= store.google_rating %></p>
-              <p><%= store.operating_hours %></p>
+              <p><%= store.display_phone %></p>
             </div>
           </div>
           <div class="card-action">
