--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   </head>
   <ul id="dropdown1" class="dropdown-content">
     <li><a href="#!" class="blue-text">Profile</a></li>
@@ -24,7 +25,7 @@
           <li><a href="badges.html">Community</a></li>
         </ul>
         <ul class="right valign-wrapper hide-on-med-and-down">
-          <li> <%= button_to "Sign in with Google", "/auth/google_oauth2", class: "btn btn-small red z-depth-4 pulse", id: "sign_in" unless current_user%> </li>
+          <li> <%= button_to "Sign in with Google", "/auth/google_oauth2", class: "btn btn-small orange-text  grey darken-3 z-depth-4 pulse", id: "sign_in" unless current_user%> </li>
           <% if current_user %>
             <li> <%= image_tag current_user.image_url, class: "circle responsive-img small valign", height: "40", width: "40" unless !current_user%> </li>
             <li> <a class="dropdown-button" href="#!" data-activates="dropdown1">Welcome <%= current_user.name %><i class="material-icons right">arrow_drop_down</i></a></li>
