--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,31 +1,52 @@
 <h1 class="white-text">Nearby Stores</h1>
+
 <div class="row">
   <% @stores.each do |store| %>
-    <div class="col s12 m6">
-      <h5 class="blue-text "><%= truncate(store.name, length: 30) %></h5>
-      <div class="card blue-grey lighten-5 horizontal">
-        <div class="card-image">
-          <iframe
-            width="225"
-            height="225"
-            frameborder="0" style="border:0"
-            src="https://www.google.com/maps/embed/v1/place?key=<%= store.google_embed_key  %>&q=place_id:<%= store.place_id  %>">
-          </iframe>
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <div id="store-info" class="black-text">
-              <p>Address: <%= store.address %></p>
-              <p>Status: <%= store.open_now %></p>
-              <p>Google Rating: <%= store.google_rating %></p>
-              <p><%= store.display_phone %></p>
-            </div>
+    <div class="col s12 m4">
+      <div class="card large">
+         <div class="card-image waves-effect z-depth-3 waves-block waves-light">
+           <iframe
+             width="300"
+             height="300"
+             frameborder="0" style="border:0"
+             src="https://www.google.com/maps/embed/v1/place?key=<%= store.google_embed_key  %>&q=place_id:<%= store.place_id  %>">
+           </iframe>
+         </div>
+         <div class="card-content">
+          <span class="activator grey-text text-darken-4"><p><%= truncate(store.name, length: 30) %></p class="strong"><i class="material-icons right">more_vert</i></span>
+          <div id="store-details" class="grey-text">
+             <p><%= store.address %></p>
+             <p>Status: <%= store.open_now %></p>
+             <p><%= store.display_phone %></p>
+           </div>
+         </div>
+         <div class="card-action">
+            <a href="#">link</a>
+            <a>Google Rating: <%= store.google_rating %></a>
           </div>
-          <div class="card-action">
-            <a href="#">Store Info</a>
-          </div>
-        </div>
-      </div>
+         <div class="card-reveal">
+           <span class="card-title grey-text text-darken-4">Review<i class="material-icons right">close</i></span>
+          <button class="btn btn-primary">Word</button>
+          <%= store.phone %>
+           <p>
+             Well, the way they make shows is, they make one show.
+             That show's called a pilot. Then they show that show to
+             the people who make shows, and on the strength of that
+             one show they decide if they're going to make more shows.
+             Some pilots get picked and become television programs. Some
+             don't, become nothing. She starred in one of the ones that
+             became nothing.
+           </p>
+           <p>
+             Well, the way they make shows is, they make one show. That
+             show's called a pilot. Then they show that show to the people
+             who make shows, and on the strength of that one show they decide
+             if they're going to make more shows. Some pilots get picked and
+             become television programs. Some don't, become nothing. She
+             starred in one of the ones that became nothing.
+           </p>
+         </div>
+       </div>
     </div>
-  <% end %>
-</div>
+   <% end %>
+ </div>
