add yelp rating to store cards

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -27,7 +27,7 @@
          <div class="card-reveal">
            <span class="card-title grey-text text-darken-4">Review<i class="material-icons right">close</i></span>
           <button class="btn btn-primary">Word</button>
-          <%= store.phone %>
+          Yelp Score: <%= store.yelp_rating %>
            <p>
              Well, the way they make shows is, they make one show.
              That show's called a pilot. Then they show that show to
