move google rating to car action on store"

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -22,12 +22,14 @@
          </div>
          <div class="card-action">
             <a href="#">link</a>
-            <a>Google Rating: <%= store.google_rating %></a>
+            <a>Tank Man Rating: </a>
           </div>
          <div class="card-reveal">
            <span class="card-title grey-text text-darken-4">Review<i class="material-icons right">close</i></span>
           <button class="btn btn-primary">Word</button>
-          Yelp Score: <%= store.yelp_rating %>
+          <br><br>
+          Yelp Score: <%= store.yelp_rating %><br>
+          Google Score: <%= store.google_rating %>
            <p>
              Well, the way they make shows is, they make one show.
              That show's called a pilot. Then they show that show to
