--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,28 +17,26 @@
   </ul>
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper" id="navbar">
-        <a href="#!" class="brand-logo center">Tank Man</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="left valign-wrapper hide-on-med-and-down">
-          <li><a href=<%= stores_path %>>Stores</a></li>
-          <li><a href="badges.html">Community</a></li>
-        </ul>
-        <ul class="right valign-wrapper hide-on-med-and-down">
-          <li> <%= button_to "Sign in with Google", "/auth/google_oauth2", class: "btn btn-small orange-text  grey darken-3 z-depth-4 pulse", id: "sign_in" unless current_user%> </li>
-          <% if current_user %>
-            <li> <%= image_tag current_user.image_url, class: "circle responsive-img small valign", height: "40", width: "40" unless !current_user%> </li>
-            <li> <a class="dropdown-button" href="#!" data-activates="dropdown1">Welcome <%= current_user.name %><i class="material-icons right">arrow_drop_down</i></a></li>
-          <% end %>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href=<%= stores_path %>>Stores</a></li>
-          <li><a href="sass.html">Profile</a></li>
-          <li><a href="badges.html">Community</a></li>
-          <li><a href="collapsible.html">Login</a></li>
-          <li><a href="mobile.html">Logout</a></li>
-        </ul>
-      </div>
+      <a href="/" class="brand-logo center">Tank Man</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="left valign-wrapper hide-on-med-and-down">
+        <li><a href=<%= stores_path %>>Stores</a></li>
+        <li><a href="badges.html">Community</a></li>
+      </ul>
+      <ul class="right valign-wrapper hide-on-med-and-down">
+        <li> <%= button_to "Sign in with Google", "/auth/google_oauth2", class: "btn btn-small orange-text  grey darken-3 z-depth-4 pulse", id: "sign_in" unless current_user%> </li>
+        <% if current_user %>
+          <li> <%= image_tag current_user.image_url, class: "circle responsive-img small valign", height: "40", width: "40" unless !current_user%> </li>
+          <li> <a class="dropdown-button" href="#!" data-activates="dropdown1">Welcome <%= current_user.name %><i class="material-icons right">arrow_drop_down</i></a></li>
+        <% end %>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href=<%= stores_path %>>Stores</a></li>
+        <li><a href="sass.html">Profile</a></li>
+        <li><a href="badges.html">Community</a></li>
+        <li><a href="collapsible.html">Login</a></li>
+        <li><a href="mobile.html">Logout</a></li>
+      </ul>
     </nav>
   </div>
   <main>
@@ -52,23 +50,22 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
+        <h5 class="white-text">Dev Team</h5>
         <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
       </div>
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Links</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://github.com/blackknight75/tank_man">GitHub</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://waffle.io/blackknight75/tank_man">Waffle.io</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Heroku</a></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="footer-copyright">
     <div class="container">
-    © 2014 Copyright Text
+    © 2017 Copyright Text
     <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
     </div>
   </div>
@@ -78,6 +75,6 @@
       $('select').material_select();
       $(".button-collapse").sideNav();
       $(".dropdown-button").dropdown();
-  });
-</script>
+    });
+  </script>
 </html>
