--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @store.name %></h1>
+<h1 class='white-text'><%= @store.name %></h1>
 <div class="row">
   <div class="col s12 m6 z-depth-2">
     <iframe class="left"
@@ -12,11 +12,17 @@
   <div class="col s12 m5">
     <div class="card white z-depth-4">
       <div class="card-content black-text">
-        <span class="card-title"><%= @store.address %></span>
-        <p>Status: <%= @store.open_now %></p>
-        <p><%= @store.display_phone %></p>
-        Yelp Score: <%= @store.yelp_rating %><br>
-        Google Score: <%= @store.google_rating %>
+        <span class="card-title"><%= @store.street %></span>
+        <p><%= @store.city %>, <%= @store.state %> <%= @store.zipcode %></p>
+        <% if @store.open_now == "Open" %>
+          <p class="green-text">Status: <%= @store.open_now %></p>
+        <% else %>
+          <p class="red-text">Status: <%= @store.open_now %></p>
+        <% end %>
+        <br>
+        <p class="grey-text"><%= @store.display_phone %></p>
+        <p class="grey-text">Yelp Score: <%= @store.yelp_rating %></p>
+        <p class="grey-text">Google Score: <%= @store.google_rating %></p>
       </div>
       <div class="card-action">
         <a href="#">This is a link</a>
