--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <li><a href=<%= stores_path %>>Stores</a></li>
         <li><a href="badges.html">Community</a></li>
       </ul>
-      <ul class="right valign-wrapper hide-on-med-and-down">
+      <ul class="right valign-wrapper hide-on-med-and-down" id="nav-right">
         <li> <%= button_to "Sign in with Google", "/auth/google_oauth2", class: "btn btn-small orange-text  grey darken-3 z-depth-4 pulse", id: "sign_in" unless current_user%> </li>
         <% if current_user %>
           <li> <%= image_tag current_user.image_url, class: "circle responsive-img small valign", height: "40", width: "40" unless !current_user%> </li>
