--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -17,7 +17,8 @@
             <span class="activator grey-text text-darken-4"><p><%= link_to truncate(store.name, length: 30), "/stores/#{store.place_id}" %></p><i class="material-icons right">more_vert</i></span>
           </div>
           <div id="store-info" class="grey-text">
-             <p><%= store.address %></p>
+            <span class="card-title"><%= store.street %></span>
+            <p><%= store.city %>, <%= store.state %> <%= store.zipcode %></p>
              <p>Status: <%= store.open_now %></p>
              <p><%= store.display_phone %></p>
            </div>
