brefore master merge

--- a/app/views/user/dashboard/show.html.erb
+++ b/app/views/user/dashboard/show.html.erb
@@ -13,7 +13,7 @@
           </div>
           <div id="store-info" class="grey-text">
              <p><%= tank.size %> Gallons</p>
-             <p>Tabk Type: <%= tank.style %></p>
+             <p>Tank Type: <%= tank.style %></p>
              <p><%= tank.description %></p>
            </div>
          </div>
