--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <ul id="dropdown1" class="dropdown-content">
     <li><a href="#!" class="blue-text">Profile</a></li>
-    <li><a href="#!" class="blue-text">Something</a></li>
+    <li><a href=<%= dashboard_path %> class="blue-text">Dashboard</a></li>
     <li class="divider" class="blue-text"></li>
     <li><a href=<%= logout_path %> class="blue-text">Logout</a></li>
   </ul>
