remove get method from link

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -14,7 +14,7 @@
         <i class="material-icons">close</i>
       </div>
         <input id="submit" type="submit" class="btn btn-small orange-text  grey darken-3 z-depth-4">
-        <%= link_to "Stores Near Me", stores_path, class: "btn btn-small orange-text  grey darken-3 z-depth-4 right", method: 'get' %>
+        <%= link_to "Stores Near Me", stores_path, class: "btn btn-small orange-text  grey darken-3 z-depth-4 right"%>
     </form>
     <br><br>
   </div>
