Dano stores by browser location (#51)
* fix edge case for stores missing data

* can find nearby stores by Browser location

* add stores near me button to store search box

* remove get method from link

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -3,7 +3,7 @@
     <h1 class="white-text">HOME</h1>
   </div>
   <div class="col s4">
-    <!-- Promo Content 2 goes here -->
+
   </div>
   <div class="col s4 grey darken-3 card">
     <h5 class='white-text'>Seach Stores By Zipcode</h5>
@@ -14,7 +14,8 @@
         <i class="material-icons">close</i>
       </div>
         <input id="submit" type="submit" class="btn btn-small orange-text  grey darken-3 z-depth-4">
-        <br><br>
+        <%= link_to "Stores Near Me", stores_path, class: "btn btn-small orange-text  grey darken-3 z-depth-4 right"%>
     </form>
+    <br><br>
   </div>
 </div>
