add basic site info to guest root page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -24,3 +24,60 @@ nav {
 html {
   font-family: 'Righteous', cursive;
 }
+.fullscreen-bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+}
+
+.fullscreen-bg__video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    min-height: 100%;
+    -webkit-transform: translate(-50%, -50%);
+       -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+	    transform: translate(-50%, -50%);
+}
+
+@media (max-width: 767px) {
+    .fullscreen-bg {
+        background: url('http://dev2.slicejack.com/fullscreen-video-demo/img/videoframe.jpg') center center / cover no-repeat;
+    }
+
+    .fullscreen-bg__video {
+        display: none;
+    }
+}
+
+.secondary-content {
+    float: right;
+    color: #0072BC;
+}
+
+.collection {
+    margin: .5rem 0 1rem 0;
+    border: 0px;
+    border-radius: 0px;
+}
+
+.collection .collection-item {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-bottom: 0px;
+}
+
+.collection .collection-item.avatar i.circle {
+    font-size: 18px;
+    line-height: 42px;
+    color: #424242;
+    background-color: #ff9800;
+    text-align: center;
+}
