--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,7 @@
       $('select').material_select();
       $(".button-collapse").sideNav();
       $(".dropdown-button").dropdown();
+      $('.slider').slider();
     });
   </script>
 </html>
