--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <% @stores.each do |store| %>
     <div class="col s12 m4">
-      <div class="card large">
+      <div class="card large" style="border-radius: 20px;">
          <div class="card-image waves-effect z-depth-3 waves-block waves-light">
            <iframe
              width="300"
