--- a/app/views/background/_video.html.erb
+++ b/app/views/background/_video.html.erb
@@ -1,5 +1,5 @@
 <div class="fullscreen-bg">
-    <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+    <video loop muted autoplay class="fullscreen-bg__video">
         <source src="/assets/tank.mp4" type="video/webm">
         <source src="/assets/tank.mp4" type="video/mp4">
         <source src="/assets/tank.mp4" type="video/ogg">
