--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   </head>
-    <%= render 'background/video' %>
+      <%= render 'background/video', cached: true %>
     <div class="navbar-fixed">
       <nav>
         <a href="/" class="brand-logo center">Tank Man</a>
@@ -39,11 +39,14 @@
               <div class="card grey darken-4 z-depth-4" style="border-radius: 20px">
                 <br>
                 <h1 class='white-text center'>Welcome To Tank Man</h1>
+                <span><p class='white-text center'>"The Best Tank Manager On The Web!"</p></span>
                   <ul class="collection white-text">
                     <li class="collection-item avatar">
                       <i class="material-icons circle">supervisor_account</i>
                       <span class="title">Users</span>
-                      <p><%= link_to @presenter.user_count,"", class: "red-text" %> Registered Users<br>
+                      <% cache(key_for(@presenter.user_count) + "user-count") do %>
+                        <p><%= link_to @presenter.user_count,"", class: "red-text" %> Registered Users<br>
+                      <% end %>
                         Exchange valuable information with fellow aquarists
                       </p>
                       <a href="#!" class="secondary-content"><i class="material-icons">whatshot</i></a>
@@ -51,7 +54,9 @@
                     <li class="collection-item avatar">
                       <i class="material-icons circle">insert_comment</i>
                       <span class="title">Reviews</span>
-                      <p><%= link_to @presenter.review_count,"", class: "red-text" %> Local Store Reviews<br>
+                      <% cache(key_for(@presenter.review_count) + "review-count") do %>
+                        <p><%= link_to @presenter.review_count,"", class: "red-text" %> Local Store Reviews<br>
+                      <% end %>
                         With reviews you can stay up to date on local stores.<br>
                         Weather it's a sale or a recent ick outbreak, know before you walk in the door.
                       </p>
@@ -60,7 +65,9 @@
                     <li class="collection-item avatar">
                       <i class="material-icons circle">insert_chart</i>
                       <span class="title">Tank Management</span>
-                      <p>Managing over <%= link_to @presenter.tank_count,"", class: "red-text" %> user tanks<br>
+                      <% cache(key_for(@presenter.tank_count) + "tank-count") do %>
+                        <p>Managing over <%= link_to @presenter.tank_count,"", class: "red-text" %> user tanks<br>
+                      <% end %>
                         From water parameters, to setup, to liforms inside. Track it all with Tank Man.
                       </p>
                       <a href="#!" class="secondary-content"><i class="material-icons">whatshot</i></a>
