update user flow from guest root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </ul>
   <div class="navbar-fixed">
     <nav>
-      <a href="/" class="brand-logo center">Tank Man</a>
+      <a href="<%=dashboard_path(current_user)  %>" class="brand-logo center">Tank Man</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="left valign-wrapper hide-on-med-and-down">
         <li><a href=<%= stores_path %>>Stores</a></li>
