--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -6,6 +6,8 @@
       <div class="card large" style="border-radius: 20px;">
          <div class="card-image waves-effect z-depth-3 waves-block waves-light">
            <iframe
+             style="border-radius: 20px;"
+             class="card-image"
              width="300"
              height="300"
              frameborder="0" style="border:0"
