--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,10 +1,10 @@
 <h1 class='white-text'><%= @store.name %></h1>
 <div class="row">
-  <div class="col s12 m6 z-depth-2">
+  <div class="col s12 m6">
     <iframe class="left"
       width="460"
       height="450"
-      frameborder="0" style="border:0"
+      frameborder= 5px style="border:solid"
       src="https://www.google.com/maps/embed/v1/place?key=<%= @store.google_embed_key  %>&q=place_id:<%= @store.place_id  %>">
     </iframe>
   </div>
