--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -32,5 +32,35 @@
         <a href="#">This is a link</a>
       </div>
     </div>
+
+    <body>
+      <div class="card white z-depth-4">
+        <div class="card-content black-text">
+          <form action="/reviews" id="rating" method='post'>
+            Enter your review:<input type="text" name="review">
+            <input type="hidden" name="store" value="<%= @store.place_id %>" >
+            <select name="stars" >
+              <option value="1">★</option>
+              <option value="2">★★</option>
+              <option value="3">★★★</option>
+              <option value="4">★★★★</option>
+              <option value="5">★★★★★</option>
+            </select>
+            <input type="submit" params: { store: :@store.id}>
+          </form>
+
+        </div>
+      </div>
+   </body>
+</div>
+<% @reviews.each do |review| %>
+<div class="card white col s12 m12">
+  <div class="card-content black-text">
+    <body>
+      <%= review.user.name %><br>
+        Rated: <%= review.stars %><br>
+        Review: <%= review.body %><br>
+  </body>
   </div>
 </div>
+<% end %>
