--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,8 @@
       $('select').material_select();
       $(".button-collapse").sideNav();
       $(".dropdown-button").dropdown();
+      $('.materialboxed').materialbox();
+      $('.modal').modal();
     });
   </script>
 </html>
