adds testing 13-0 also fixes the tanks man score issue of big decimal

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -23,6 +23,7 @@
         <p class="grey-text"><%= @store.display_phone %></p></br>
         <div class="reviews">
         <div class="review-tm">
+          <%# require "pry"; binding.pry %>
           <p class="black-text">Total Score: <%= @store.complete_rating %></br></p>
         </div>
           <p class="grey-text">Tank Man Score: <%= @store.tank_man_score %></p>
