--- a/app/views/search/_search_box.html.erb
+++ b/app/views/search/_search_box.html.erb
@@ -1,4 +1,3 @@
-<div class="col s5 grey darken-3 card large right" style="border-radius: 20px">
   <h5 class='white-text'>Seach Stores By Zipcode</h5>
   <form action='/near_by_stores' method='get'>
     <div class="input-field card">
@@ -14,23 +13,23 @@
     <br>
   <div class="row">
     <div id="control-buttons1" class="col s12">
-      <a class="waves-effect grey darken-4 orange-text btn-large left" style="border-radius: 20px; 20px; width: 175px;" href="#modal1">Add A Tank</a>
-      <a class="waves-effect grey darken-4 orange-text btn-large right" style="border-radius: 20px; 20px; width: 175px;" href="#modal1">Add A Tank</a>
+      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;" href="#modal1">Add A Tank</a>
+      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;" href="#modal1">Add A Tank</a>
     </div>
   </div>
-    <br>
     <div class="divider"></div>
     <br>
   <div class="row">
     <div id="graph-ph-ammonia" class="col s12">
-      <a class="waves-effect grey darken-4 orange-text btn-large left" style="border-radius: 20px; 20px; width: 175px;">Ph</a>
-      <a class="waves-effect grey darken-4 orange-text btn-large right" style="border-radius: 20px; 20px; width: 175px;">Ammonia</a>
+      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Ph</a>
+      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;">Ammonia</a></br>
     </div>
+  </div>
 
-    <div id="graph-ph-ammonia" class="col s12">
-      <a class="waves-effect grey darken-4 orange-text btn-large left" style="border-radius: 20px; 20px; width: 175px;">Nitrates</a>
-      <a class="waves-effect grey darken-4 orange-text btn-large right" style="border-radius: 20px; 20px; width: 175px;">Temperature</a>
+  <div class="row">
+    <div id="graph-ph" class="col s12">
+      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Nitrates</a>
+      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;">Temperature</a>
     </div>
   </div>
   <br><br>
-</div>
