--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,17 @@
     </nav>
   </div>
   <main>
+    <div class="flash-message green-text" style='text-align:center'>
+      <% flash.each do |type, message| %>
+        <% if type == "success" %>
+          <%= content_tag :div, sanitize(message), class:"alert-success" %>
+        <% elsif type == "danger" %>
+          <%= content_tag :div, sanitize(message), class:"alert-danger" %>
+        <% else %>
+          <%= content_tag :div, sanitize(message), class:"type" %>
+        <% end %>
+      <% end %>
+    </div>
     <div class="container">
       <body>
         <%= yield %>
